--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -5,7 +5,7 @@
       %li
         %h1 Development Economics
       %li 
-        %h4.gray Playlists of research papers for the big questions in development economics
+        %h4.gray Collections of research questions, updated daily
         
 %ul.collections
   - @collections.each do |collection|
