Add search bar -- no functionlity yet

--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -6,6 +6,12 @@
         %h1 Development Economics
       %li 
         %h4.gray Collections of research questions, updated daily
+
+%input{autofocus: "true", autocomplete: "off", class: "autocomplete", id: "q", placeholder: "Start typing...", type: "text", spellcheck: "false"}
+
+
+
+
         
 %ul.collections
   - @collections.each do |collection|
