--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,10 @@
       = full_title(yield(:title))
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    %script{src: "//cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"} 
+    %script{src: "//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"}
     = csrf_meta_tags
+    
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"}
     = render 'shared/analytics'
     = render 'layouts/shim'
