--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,29 @@ a {
 	}
 }
 
+.noresults {
+	text-align: center;
+	span {
+		display: inline-block;
+		text-align: center;
+		margin: 0 auto;
+		font-size: 1.2em;
+
+	}
+}
+
+.search {
+	input {
+		display: block;
+		margin: 0 auto;
+		width: 600px;
+		height: 30px;
+		padding: 5px;
+		margin-bottom: 50px;
+	}
+}
+
+
 #list_title {
 	width: 500px;
 }
@@ -417,7 +440,7 @@ input[type=checkbox]
 .heading {
 	margin-left: 100px;
 	margin-right: 100px;
-	margin-bottom: 60px;
+	margin-bottom: 30px;
 	margin-top: 60px;
 	h1 {
 		margin-bottom: 10px;
