Modify placeholder text in search bar

--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -7,7 +7,7 @@
       %li 
         %h4.gray Collections of research questions, updated daily
 .search
-  %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search for research questions...", type: "text", spellcheck: "false"}
+  %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search for research questions (e.g. microcredit)", type: "text", spellcheck: "false"}
 
 #display
   #hits
