Add weekday to header

--- a/app/assets/javascripts/search.js.erb
+++ b/app/assets/javascripts/search.js.erb
@@ -35,6 +35,8 @@ function searchCallback(err, content) {
       <span>Sorry! We couldn\'t find any research questions for you.</br> \
       Want to try <a href="' + searchInput + '">searching for <i>' + $inputfield.val() + '</i> on Google Scholar?</a> \
       </span> \
+      <div> \
+      </div> \
     </div>')
     return;
   }
