--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,6 +8,8 @@
     .text-right.slogan
       %ul
         / %li= link_to "Who's contributing to this project?", static_pages_contributors_path
+        %li 
+          = "Happy #{Date.today.strftime('%A')}!"
         - if current_user.try(:admin?)
           %li= button_to "Create list", new_list_path, method: 'get'
         - if signed_in?
