--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -5,7 +5,7 @@
       %li
         %h1 Development Economics
       %li 
-        %h4.gray A growing repository of research questions 
+        %h4.gray A repository for open research questions 
 .search
   %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search for research questions (e.g. microcredit)", type: "text", spellcheck: "false"}
 
