Change the subtitle and search prompt to be clearer

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -5,9 +5,9 @@
       %li
         %h1 Development Economics
       %li 
-        %h4.gray A repository for open research questions 
+        %h4.gray Discover the research literature on any topic
 .search
-  %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search for a research question (e.g. microcredit)", type: "text", spellcheck: "false"}
+  %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search any topic in development economics (e.g. microcredit)", type: "text", spellcheck: "false"}
 
 #display
   #hits
