--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -1,36 +1,23 @@
 - provide(:title, "Home")
+
 .row.heading.text-center
-  .col-xs-12
+  .col-xs-12 
     %ul
       %li
-        %h1 Development Economics
+        %h1 Directory
       %li 
-        %h4.gray A repository for open research questions 
-.search
-  %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search for a research question (e.g. microcredit)", type: "text", spellcheck: "false"}
+        %h4.gray Browse research questions by topic
 
-#display
-  #hits
-  :javascript
-    var $inputfield = $('#q');
-    var $hits = $('#hits');
+%ul.collections
+  - @collections.each do |collection|
+    %li
+      %div{:class => 'bg-img', :style => %(background-image:url(/assets/#{collection.image_url}))}
 
-          
-  .collections
-    %span With Research GPS, it just takes one click to discover the existing literature on particular research questions in development economics. Enter your keywords into the search box above or
-    %span#random= link_to "go to a research question at random.", list_path(List.offset(rand(List.count)).first)
+      / style: "background-image: url(_#{image_path image_url}_)"}
+      =link_to collection_path(collection) do
+        %span= collection.name
+        %span.question-count= "#{pluralize(collection.lists.count, 'research question')}"
 
-
-  /   - @collections.each do |collection|
-  /     %li
-  /       %div{:class => 'bg-img', :style => %(background-image:url(/assets/#{collection.image_url}))}
-
-  /       / style: "background-image: url(_#{image_path image_url}_)"}
-  /       =link_to collection_path(collection) do
-  /         %span= collection.name
-  /         %span.question-count= "#{pluralize(collection.lists.count, 'research question')}"
-  :javascript
-    var $collections = $('.collections')
 
 
   / %div{:class => 'styled_div', :style => %(background:url("#{resource.background.url(:medium)}") no-repeat center)}
