--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,21 @@ a {
 	}
 }
 
+.people {
+	li {
+		float: left;
+	}
+}
+
+.otherpages {
+	li {
+		margin-bottom: 5px;
+	}
+	a {
+		color: blue;
+	}
+}
+
 .noresults {
 	text-align: center;
 	span {
@@ -54,6 +69,20 @@ a {
 	a {
 		color: blue;
 	}
+}
+
+.right-header {
+	li {
+		float: left;
+		margin-left: 5px;
+		a {
+			color: blue;
+		}
+	}
+}
+
+.instructions {
+	text-align: center;
 }
 
 .search {
@@ -176,9 +205,10 @@ span#unpublished {
 }
 
 .collections, .topics {
-	margin-left: 250px;
-	margin-right: 250px;
-	display: inline-block;
+	width: 70%;
+	// display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center;
 	li {
 		width: 220px;
@@ -224,6 +254,16 @@ span#unpublished {
 				text-decoration: none;
 			}
 		}
+	}
+}
+
+.about {
+	width: 500px;
+	// horizontal-align: middle;
+	margin-left: auto;
+	margin-right: auto;
+	a {
+		color: blue;
 	}
 }
 
@@ -454,7 +494,7 @@ input[type=checkbox]
 .heading {
 	margin-left: 100px;
 	margin-right: 100px;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	margin-top: 60px;
 	h1 {
 		margin-bottom: 10px;
