--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,11 +5,13 @@
         =link_to root_path do 
           Research
           %span#globe GPS
-    .text-right.slogan
-      %ul
+    .text-right.slogan.right-header
+      %ul.pull-right
         / %li= link_to "Who's contributing to this project?", static_pages_contributors_path
         %li 
           = "Happy #{Date.today.strftime('%A')}!"
+        %li
+          = link_to "Learn more about us.", static_pages_about_path
         - if current_user.try(:admin?)
           %li= button_to "Create list", new_list_path, method: 'get'
         - if signed_in?
