--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -19,7 +19,7 @@
   %br
   %br
 
-  Research GPS is a 
-  %span= link_to "community of development economists", '#'
+  Research GPS is a community of develoment economists
+  / # %span= link_to "community of development economists", static_pages_people_path
 
   who spend their time at the frontier of the field and want to share their knowledge. If you’d like to join our community, please email info@researchgps.com.
