--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -6,7 +6,7 @@
       %li
         %h1 Development Economics
       %li 
-        %h4.gray Research questions, addressed by economists 
+        %h4.gray Search a topic and find out what the research tells us
 .search
   %input{autofocus: "true", autocomplete: "off", class: "instantsearch", id: "q", placeholder: "Search any topic in development economics (e.g. microcredit)", type: "text", spellcheck: "false"}
 
