--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -138,7 +138,7 @@ a {
 	}
 }
 
-.instructions {
+.browsetopics {
 	text-align: center;
 }
 
@@ -149,7 +149,7 @@ a {
 		width: 600px;
 		height: 40px;
 		padding: 5px 10px 5px;
-		margin-bottom: 50px;
+		margin-bottom: 30px;
 		font-size: 1.2em;
 	}
 }
