Clean up the list show page

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -4,44 +4,44 @@
     .col-xs-9.main-content
       .row
         .col-xs-12
-          %h4= @list.title
+          %h3= @list.title
           - if current_user.try(:admin?)
             = button_to "Edit", edit_list_path(@list), method: "get"
           - if !(@list.published?)
             %span#unpublished= "DRAFT"
       .row.list-info
         .col-xs-12
-          %ul.gray
+          %ul
             %li
-              %span.gray Contributors: 
-              %ul
-                - @list.users.each do |user|
-                  %li.byline
-                    =link_to user.link do
-                      %span.profile-img= image_tag("#{user.first_name}_#{user.last_name}.jpg")
-                      %span.name= "#{user.first_name} #{user.last_name}, #{user.school}"      
-            %li
-              = "Published #{time_ago_in_words(@list.created_at)} ago"
-            %li
-              = "Last updated #{time_ago_in_words(@list.updated_at)} ago"
+              = "Published #{time_ago_in_words(@list.created_at)} ago, Updated #{time_ago_in_words(@list.updated_at)} ago"
             / %li
             /   = "Viewed #{pluralize(@list.view_count, 'time')}"
-            %li.pt10.pb10.attention
-              Want to contribute to this page, either by editing the summary or adding papers? Email 
-              = mail_to "info@researchgps.com"
-              and we'll be in touch. 
+            / %li.pt10.pb10.attention
+            /   Want to contribute to this page, either by editing the summary or adding papers? Email 
+            /   = mail_to "info@researchgps.com"
+            /   and we'll be in touch. 
 
       .row.content
         .col-xs-12.description
-          %b State of the Research
-          %br
           = raw @list.description
         .col-xs-12.list-wrapper
+          %h4= "Papers that address \"#{@list.title}\""
           - if @items != []
             = render @items 
           - else
             = "We do not know of any papers that address '#{@list.title}.' If you know of some, please email us at"
             = mail_to "info@researchgps.com"
+      / .row
+      /   .col-xs-12.list-info 
+      /     %ul.gray
+      /       %li
+      /         %span.gray Contributors: 
+      /         %ul
+      /           - @list.users.each do |user|
+      /             %li.byline
+      /               =link_to user.link do
+      /                 %span.profile-img= image_tag("#{user.first_name}_#{user.last_name}.jpg")
+      /                 %span.name= "#{user.first_name} #{user.last_name}, #{user.school}"      
     .right-sidebar
       %ul#sidebar-nav-right
         %li.gray#prompt Click on an article to view its abstract here
