--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -128,6 +128,12 @@ a {
 	}
 }
 
+.list-wrapper {
+	h4 {
+		margin-top: 10px;
+	}
+}
+
 .right-header {
 	li {
 		float: left;
@@ -338,6 +344,12 @@ span#unpublished {
 	}
 }
 
+.list-info {
+	li {
+		color: gray;
+	}
+}
+
 .col-xs-12 {
 	padding-left: 0px;
 	padding-right: 0px;
@@ -363,16 +375,17 @@ span#unpublished {
 }
 
 .description {
-	background: #c6e4ee;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 10px;
-	padding-right: 10px;
+	// background: #c6e4ee;
+	// padding-top: 20px;
+	// padding-bottom: 20px;
+	// padding-left: 10px;
+	// padding-right: 10px;
 	// font-size: .9em;
 	margin-bottom: 10px;
 	a {
 		color: blue;
 	}
+	font-size: 1.1em;
 }
 
 .basic-info {
@@ -483,6 +496,10 @@ span#unpublished {
 
 .main-content {
 	margin-top: 30px;
+	h3 {
+		margin-top: 10px;
+		margin-bottom: 0px;
+	}
 }
 
 .italic {
