Add bullet point to descriptions

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,7 +3,7 @@
     .navbar-header
       .navbar-brand
         =link_to root_path do 
-          Research
+          Development Economics
           %span#globe GPS
     .text-right.slogan.right-header
       %ul.pull-right
