--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -410,8 +410,8 @@ span#unpublished {
 	}
 	li {
 		list-style: disc;
-		line-height: 25px;
 		margin-left: 20px;
+		margin-top: 7px;
 	}
 	li li {
 		list-style-type: circle;
