--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -409,13 +409,14 @@ span#unpublished {
 		margin-bottom: 5px;
 	}
 	li {
-		list-style: disc;
-		margin-left: 20px;
-		margin-top: 7px;
+		list-style-type: none;
+		// margin-left: 20px;
 	}
 	li li {
-		list-style-type: circle;
-		margin-left: 20px;
+		list-style-type: disc;
+		margin-left: 30px;
+		margin-top: 7px;
+
 	}
 }
 
