--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -15,11 +15,11 @@
   It takes time to build up knowledge in a domain of research. If you’re anything like us, you probably use a hodgepodge of methods to do so: searching databases with various combinations of keywords, paging through devo journals, citation-hopping from the seminal papers listed on course syllabi, or consulting other economists with domain expertise. 
   %br
   %br
-  Research GPS boils it down to one click. Find a research question you’re interested in and instantly discover what we know — and what we still need to know — about that question. Every research question in our repository comes with a summary of the state of the research as well as a list of the papers that address it. It's fast, comprehensive, and up-to-date. 
+  Development Economics GPS (DevEc GPS) boils it down to one click. Find a research question you’re interested in and instantly discover what we know — and what we still need to know — about that question. Every research question in our repository comes with a summary of the state of the research as well as a list of the papers that address it. It's fast, comprehensive, and up-to-date. 
   %br
   %br
 
-  Research GPS is a community of develoment economists
+  DevEc GPS is a community of develoment economists
   / # %span= link_to "community of development economists", static_pages_people_path
 
-  who spend their time at the frontier of the field and want to share their knowledge. If you’d like to join our community, please email info@researchgps.com.
+  who spend their time at the frontier of the field and want to share their knowledge. If you’d like to join our community, please email info@devecgps.com.
