--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -4,7 +4,7 @@
   .col-xs-12 
     %ul
       %li
-        %h1 Directory
+        %h1 Topics
       %li 
         %h4.gray Browse research questions by topic
 
